# vortex-cli-mirror

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yaml  requirements-dev.txt  setup.cfg
tests/: main_test.py
vortex/: main.py  models.py  soap.py  util.py  watcher.py  workspace.py
vortex/puakma/lib/: notice.txt
