[metadata]
name = vortex_cli
version = 1.0.0
description = Vortex cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordanamos/vortex-cli
author = Jordan Amos
author_email = jordan.amos@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = vortex cli

[options]
packages = vortex
install_requires =
    requests==2.28.2
    watchdog==3.0.0
    platformdirs==3.0.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    vortex = vortex.__main__:main

[options.package_data]
vortex =
    puakma/**/*.jar

[flake8]
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
